crates/wgso/tests/cases_invalid/directive_shader_def_validation/.expected
error: field `incompatible_field` of type `Inner` cannot be used as vertex data
 --> ./tests/cases_invalid/directive_shader_def_validation/vertex_type_incompatible.wgsl:1:17
  |
1 | #shader<render, Incompatible> vertex_type_incompatible
  |                 ^^^^^^^^^^^^
  |
error: type `Unknown` not found
 --> ./tests/cases_invalid/directive_shader_def_validation/vertex_type_unknown.wgsl:1:17
  |
1 | #shader<render, Unknown> vertex_type_unknown
  |                 ^^^^^^^
  |